[gd_scene load_steps=24 format=3 uid="uid://biiy266ikrp1s"]

[ext_resource type="PackedScene" uid="uid://d342vv4g7762h" path="res://Scenes/In Game Stuff/GroundLeft.tscn" id="1_08ypx"]
[ext_resource type="Script" path="res://Scripts/Players/Player_Spawning.gd" id="1_keu5t"]
[ext_resource type="PackedScene" uid="uid://crvy5gfiqpum2" path="res://Scenes/In Game Stuff/Ground.tscn" id="2_rm4sk"]
[ext_resource type="PackedScene" uid="uid://dsh7a5xw0h0uo" path="res://Scenes/In Game Stuff/GroundRight.tscn" id="3_wbhij"]
[ext_resource type="Texture2D" uid="uid://cpvk7yem2u1tg" path="res://Sprites/InGame/1st.png" id="4_h0t2x"]
[ext_resource type="Texture2D" uid="uid://belvse7qrcdqc" path="res://Sprites/InGame/2nd.png" id="5_muwlf"]
[ext_resource type="Texture2D" uid="uid://bqv6j253utyl2" path="res://Sprites/InGame/3rd.png" id="6_evywx"]
[ext_resource type="Texture2D" uid="uid://dysirfv58iu3w" path="res://Sprites/Backgrounds/sky2.png" id="8_4av1c"]
[ext_resource type="Script" path="res://Scripts/UI/Bybetimer.gd" id="9_w82my"]
[ext_resource type="Theme" uid="uid://2os1x4i4c3g5" path="res://Themes/Rainworld_SquareButtonTheme.tres" id="10_ugt6c"]
[ext_resource type="Script" path="res://Scripts/Players/Player.gd" id="11_mbqd1"]
[ext_resource type="Texture2D" uid="uid://cnkg5na4bsn4h" path="res://Sprites/InGame/Clam.png" id="12_md1tm"]
[ext_resource type="Texture2D" uid="uid://bexoeuyuxg5uc" path="res://Sprites/PowerUps/Shield.png" id="13_qwlee"]
[ext_resource type="Texture2D" uid="uid://b7jtl38wmyy0j" path="res://Sprites/InGame/ClamHood.png" id="14_ll58f"]
[ext_resource type="Script" path="res://Scripts/UI/Pause.gd" id="15_lg13q"]
[ext_resource type="Script" path="res://Scripts/UI/InGameGUI's.gd" id="16_7p278"]
[ext_resource type="Texture2D" uid="uid://nuvn2m322pir" path="res://Sprites/InGame/Pusher.png" id="16_x2i51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nenyo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqdlo"]
size = Vector2(30, 61.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1qeh"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4giq"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_re203"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i4h7"]
size = Vector2(60, 60)

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_keu5t")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Grounds" type="Node" parent="."]

[node name="Ground1" type="Node2D" parent="Grounds"]
position = Vector2(-300, 143)

[node name="Ground" parent="Grounds/Ground1" instance=ExtResource("1_08ypx")]
position = Vector2(-61, 0)

[node name="Ground2" parent="Grounds/Ground1" instance=ExtResource("2_rm4sk")]
position = Vector2(0, 0)

[node name="Ground3" parent="Grounds/Ground1" instance=ExtResource("3_wbhij")]
position = Vector2(64, 0)

[node name="1St" type="Sprite2D" parent="Grounds/Ground1"]
position = Vector2(300, -239)
texture = ExtResource("4_h0t2x")

[node name="Ground2" type="Node2D" parent="Grounds"]
position = Vector2(0, 31)

[node name="Ground" parent="Grounds/Ground2" instance=ExtResource("1_08ypx")]
position = Vector2(-61, 0)

[node name="Ground2" parent="Grounds/Ground2" instance=ExtResource("2_rm4sk")]
position = Vector2(0, 0)

[node name="Ground3" parent="Grounds/Ground2" instance=ExtResource("3_wbhij")]
position = Vector2(64, 0)

[node name="2Nd" type="Sprite2D" parent="Grounds/Ground2"]
position = Vector2(-300, -15)
texture = ExtResource("5_muwlf")

[node name="Ground3" type="Node2D" parent="Grounds"]
position = Vector2(300, 191)

[node name="Ground" parent="Grounds/Ground3" instance=ExtResource("1_08ypx")]
position = Vector2(-61, 0)

[node name="Ground2" parent="Grounds/Ground3" instance=ExtResource("2_rm4sk")]
position = Vector2(0, 0)

[node name="Ground3" parent="Grounds/Ground3" instance=ExtResource("3_wbhij")]
position = Vector2(64, 0)

[node name="3Rd" type="Sprite2D" parent="Grounds/Ground3"]
position = Vector2(-3.05176e-05, -127)
texture = ExtResource("6_evywx")

[node name="Ground4" type="Node2D" parent="Grounds"]
position = Vector2(0, 349)

[node name="Ground" parent="Grounds/Ground4" instance=ExtResource("1_08ypx")]
position = Vector2(-61, 0)

[node name="Ground2" parent="Grounds/Ground4" instance=ExtResource("2_rm4sk")]
position = Vector2(0, 0)

[node name="Ground3" parent="Grounds/Ground4" instance=ExtResource("3_wbhij")]
position = Vector2(64, 0)

[node name="BG" type="Node2D" parent="."]

[node name="Sky2" type="Sprite2D" parent="BG"]
z_index = -20
position = Vector2(580, 176)
rotation = 3.14159
scale = Vector2(0.61, 0.61)
texture = ExtResource("8_4av1c")
centered = false
flip_h = true
flip_v = true

[node name="Sky4" type="Sprite2D" parent="BG"]
z_index = -20
position = Vector2(617, 175)
rotation = 3.14159
scale = Vector2(0.65, -0.6)
skew = 0.261799
texture = ExtResource("8_4av1c")
centered = false
flip_v = true

[node name="Bybetimer" type="Timer" parent="."]
autostart = true
script = ExtResource("9_w82my")

[node name="Label" type="Label" parent="Bybetimer"]
offset_left = -31.0
offset_top = -311.0
offset_right = 30.0
offset_bottom = -270.0
theme = ExtResource("10_ugt6c")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_top = -343.0
offset_right = 1.0
offset_bottom = -342.0
script = ExtResource("15_lg13q")

[node name="Resume" type="Button" parent="Pause"]
process_mode = 3
visible = false
z_index = 30
layout_mode = 0
offset_left = -73.0
offset_top = -1.0
offset_right = 73.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(73, 20)
theme = ExtResource("10_ugt6c")
text = "Resume"

[node name="Title" type="Button" parent="Pause"]
process_mode = 3
visible = false
z_index = 30
layout_mode = 0
offset_left = -153.0
offset_top = -100.5
offset_right = 154.0
offset_bottom = -59.5
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(153, 120)
theme = ExtResource("10_ugt6c")
text = "Exit to Titlescreen"

[node name="Previous" type="Button" parent="Pause"]
process_mode = 3
visible = false
z_index = 30
layout_mode = 0
offset_left = -137.0
offset_top = 99.0
offset_right = 138.0
offset_bottom = 140.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(137, -80)
theme = ExtResource("10_ugt6c")
text = "Exit to Previous"

[node name="Panel" type="Panel" parent="Pause"]
process_mode = 3
visible = false
z_index = 29
layout_mode = 0
offset_left = -184.5
offset_top = -125.5
offset_right = 173.5
offset_bottom = 157.5
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(179, 141)
mouse_filter = 2
theme = ExtResource("10_ugt6c")

[node name="Players" type="Node" parent="."]

[node name="Player 1" type="CharacterBody2D" parent="Players"]
visible = false
position = Vector2(-50, -264)
scale = Vector2(0.8, 0.8)
script = ExtResource("11_mbqd1")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 1"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 1"]
visible = false
position = Vector2(-1.25, -0.625001)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("12_md1tm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 1"]
visible = false
position = Vector2(0, -1.52588e-05)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_nenyo")
one_way_collision = true

[node name="Black" type="ColorRect" parent="Players/Player 1"]
offset_left = -18.75
offset_top = -21.25
offset_right = 41.25
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Black2" type="ColorRect" parent="Players/Player 1"]
offset_left = 10.0
offset_top = -21.25
offset_right = 70.0
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="Players/Player 1"]
z_index = 1
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("13_qwlee")

[node name="Spring" type="Sprite2D" parent="Players/Player 1"]
z_index = -1
position = Vector2(30, 0)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("16_x2i51")

[node name="Area2D" type="Area2D" parent="Players/Player 1/Spring"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 1/Spring/Area2D"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_xqdlo")

[node name="Player 2" type="CharacterBody2D" parent="Players"]
visible = false
position = Vector2(48, -264)
scale = Vector2(0.8, 0.8)
script = ExtResource("11_mbqd1")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 2"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(1, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 2"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("14_ll58f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 2"]
visible = false
shape = SubResource("RectangleShape2D_e1qeh")
one_way_collision = true

[node name="Black" type="ColorRect" parent="Players/Player 2"]
offset_left = -18.75
offset_top = -21.25
offset_right = 41.25
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Black2" type="ColorRect" parent="Players/Player 2"]
offset_left = 10.0
offset_top = -21.25
offset_right = 70.0
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="Players/Player 2"]
z_index = 1
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("13_qwlee")

[node name="Spring" type="Sprite2D" parent="Players/Player 2"]
z_index = -1
position = Vector2(30, 0)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("16_x2i51")

[node name="Area2D" type="Area2D" parent="Players/Player 2/Spring"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 2/Spring/Area2D"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_xqdlo")

[node name="Player 3" type="CharacterBody2D" parent="Players"]
visible = false
position = Vector2(-152, -264)
scale = Vector2(0.8, 0.8)
script = ExtResource("11_mbqd1")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 3"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.627451, 0, 0.717647, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 3"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("12_md1tm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 3"]
visible = false
shape = SubResource("RectangleShape2D_b4giq")
one_way_collision = true

[node name="Black" type="ColorRect" parent="Players/Player 3"]
offset_left = -18.75
offset_top = -21.25
offset_right = 41.25
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Black2" type="ColorRect" parent="Players/Player 3"]
offset_left = 10.0
offset_top = -21.25
offset_right = 70.0
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="Players/Player 3"]
z_index = 1
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("13_qwlee")

[node name="Spring" type="Sprite2D" parent="Players/Player 3"]
z_index = -1
position = Vector2(30, 0)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("16_x2i51")

[node name="Area2D" type="Area2D" parent="Players/Player 3/Spring"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 3/Spring/Area2D"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_xqdlo")

[node name="Player 4" type="CharacterBody2D" parent="Players"]
visible = false
position = Vector2(145, -265)
scale = Vector2(0.8, 0.8)
script = ExtResource("11_mbqd1")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 4"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.741176, 0, 0.309804, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 4"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("14_ll58f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 4"]
visible = false
shape = SubResource("RectangleShape2D_re203")
one_way_collision = true

[node name="Black" type="ColorRect" parent="Players/Player 4"]
offset_left = -18.75
offset_top = -21.25
offset_right = 41.25
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Black2" type="ColorRect" parent="Players/Player 4"]
offset_left = 10.0
offset_top = -21.25
offset_right = 70.0
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="Players/Player 4"]
z_index = 1
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("13_qwlee")

[node name="Spring" type="Sprite2D" parent="Players/Player 4"]
z_index = -1
position = Vector2(30, 0)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("16_x2i51")

[node name="Area2D" type="Area2D" parent="Players/Player 4/Spring"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 4/Spring/Area2D"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_xqdlo")

[node name="Player 5" type="CharacterBody2D" parent="Players"]
visible = false
position = Vector2(145, -265)
scale = Vector2(0.8, 0.8)
script = ExtResource("11_mbqd1")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 5"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0, 0.8, 0.180392, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 5"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("14_ll58f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 5"]
visible = false
shape = SubResource("RectangleShape2D_6i4h7")
one_way_collision = true

[node name="Black" type="ColorRect" parent="Players/Player 5"]
offset_left = -18.75
offset_top = -21.25
offset_right = 41.25
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Black2" type="ColorRect" parent="Players/Player 5"]
offset_left = 10.0
offset_top = -21.25
offset_right = 70.0
offset_bottom = 38.75
scale = Vector2(0.15, 0.4)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="Players/Player 5"]
z_index = 1
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("13_qwlee")

[node name="Spring" type="Sprite2D" parent="Players/Player 5"]
z_index = -1
position = Vector2(30, 0)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("16_x2i51")

[node name="Area2D" type="Area2D" parent="Players/Player 5/Spring"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 5/Spring/Area2D"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_xqdlo")

[node name="GUI\'s" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 267.0
offset_right = 40.0
offset_bottom = 307.0

[node name="P1" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = -552.0
offset_top = -566.0
offset_right = -330.0
offset_bottom = -525.0
theme = ExtResource("10_ugt6c")
text = "Player 1: 10%"
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P2" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = -304.0
offset_top = -566.0
offset_right = -77.0
offset_bottom = -525.0
theme = ExtResource("10_ugt6c")
text = "Player 2: 10%"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P3" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = 78.0
offset_top = -566.0
offset_right = 300.0
offset_bottom = -525.0
theme = ExtResource("10_ugt6c")
text = "Player 1: 10%"
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P4" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = 326.0
offset_top = -566.0
offset_right = 553.0
offset_bottom = -525.0
theme = ExtResource("10_ugt6c")
text = "Player 2: 10%"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P1Score" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = -533.0
offset_top = -6.0
offset_right = -333.0
offset_bottom = 35.0
theme = ExtResource("10_ugt6c")
text = "P1 Points: 0"
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P2Score" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = -245.5
offset_top = -6.0
offset_right = -40.5
offset_bottom = 35.0
theme = ExtResource("10_ugt6c")
text = "P2 Points: 0"
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P3Score" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = 42.0
offset_top = -6.0
offset_right = 247.0
offset_bottom = 35.0
theme = ExtResource("10_ugt6c")
text = "P3 Points: 0"
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="P4Score" type="Label" parent="GUI\'s"]
z_index = 20
layout_mode = 0
offset_left = 329.5
offset_top = -6.0
offset_right = 534.5
offset_bottom = 35.0
theme = ExtResource("10_ugt6c")
text = "P4 Points: 0"
vertical_alignment = 1
script = ExtResource("16_7p278")

[node name="7" type="Node2D" parent="."]

[node name="SpawnPos\'" type="Node" parent="."]

[node name="SpawnPos1" type="Node2D" parent="SpawnPos\'"]
position = Vector2(0, -40)

[node name="SpawnPos2" type="Node2D" parent="SpawnPos\'"]
position = Vector2(-303, 76)

[node name="SpawnPos3" type="Node2D" parent="SpawnPos\'"]
position = Vector2(302, 115)

[node name="SpawnPos4" type="Node2D" parent="SpawnPos\'"]
position = Vector2(-4, 268)

[connection signal="timeout" from="Bybetimer" to="Bybetimer" method="_on_timeout"]
[connection signal="pressed" from="Pause/Resume" to="Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/Title" to="Pause" method="_on_title_pressed"]
[connection signal="pressed" from="Pause/Previous" to="Pause" method="_on_previous_pressed"]
